# project-template

./: README.md  README.rst
project_name/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  __init__.py-tpl  asgi.py  dashboard.py  dashboard.py-tpl  docker-compose.yml  manage.py  manage.py-tpl  pyproject.toml  requirements-itcase.txt  requirements.txt  urls.py  urls.py-tpl  urls_debug.py-tpl  wsgi.py  wsgi.py-tpl
project_name/default/: prod.local.py-tpl  prod.uwsgi.ini
project_name/docker-compose/django/: Dockerfile  cron  entrypoint.sh  env
project_name/docker-compose/django/itcase/: README.md
project_name/docker-compose/postgres/init/: README.md  restore-dump.sh
project_name/production/: local.py  supervisord.ini  uwsgi.ini
project_name/settings/: __init__.py  __init__.py-tpl  cache.py  cache.py-tpl  core.py  core.py-tpl  filebrowser.py  filebrowser.py-tpl  grappelli.py  grappelli.py-tpl  local.py-tpl  logging.py  logging.py-tpl  project.py  project.py-tpl  rest_framework.py  rest_framework.py-tpl  rq.py  rq.py-tpl  sample.local.py  sentry.py-tpl  static.py-tpl
