[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["ITCase <info@itcase.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = "^4.2"
django-filebrowser = "^4.0"
django-filter = "^25"
django-grappelli = "^3.0"
django-phonenumber-field = {version = "^8.0", extras = ["phonenumberslite"]}
django-redis = "^5.4"
django-rq = "^3.0"
django-tinymce-4 = {git = "https://github.com/ITCase-django/django-tinymce-4.git", develop = true}
djangorestframework = "^3.15"
drf-spectacular = {version = "^0.28", extras = ["sidecar"]}
channels = {version = "^4.2", extras = ["daphne"]}
channels-redis = "^4.2"
psycopg = {version = "^3.2", extras = ["binary"]}

[tool.poetry.group.prod.dependencies]
sentry-sdk = {version = "^2.15", extras = ["django"]}
supervisor = "^4.2"

[tool.poetry.group.itcase.dependencies]
itcase-common = {git = "ssh://git@github.com/ITCase/itcase-common", rev = "develop", develop = true}

[tool.poetry.group.test.dependencies]
factory-boy = "^3.3"
pytest = "^8.3"
pytest-django = "^4.10"

[tool.poetry.group.dev.dependencies]
django-cors-headers = "^4.7"
django-debug-toolbar = "^5.0"
django-extensions = "^3.2"
ipdb = "^0.13"
pre-commit = "^4.1"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-s --ds settings --reuse-db --disable-warnings --log-cli-level=ERROR --cache-clear"
testpaths = ["api/tests"]
